<resources>
    <string name="homeTextUser">User</string>
    <string name="homeTextLocation">Location</string>
    <string name="homeButtonVendors">Vendors</string>
    <string name="homeButtonMenu">Buy</string>
    <string name="homeButtonCodes">Codes</string>
    <string name="homeButtonProfile">Profile</string>
    <string name="homeImageDescriptionUser">User Image</string>
    <string name="homeImageDescriptionServer">Server Image</string>
    <string name="homeImageButtonDescriptionMenu">Menu</string>
    <string name="homeImageButtonDescriptionCart">Cart</string>
    <string name="homeImageButtonDescriptionCodes">Codes</string>
    <string name="homeImageButtonDescriptionProfile">Profile</string>
    <string name="loginTextViewTitle">Flash VIP</string>
    <string name="loginEditTextEmail">E-mail Address</string>
    <string name="loginEditTextPassword">Password</string>
    <string name="loginButtonSubmit">Submit</string>
    <string name="loginButtonResetPassword">Reset Password</string>
    <string name="loginButtonCreateAccount">Create Account</string>
    <string name="loginButtonFacebook">Login with Facebook</string>
    <string name="loginButtonTwitter">Login with Twitter</string>
    <string name="loginButtonGooglePlus">Login with Google+</string>
    <string name="createAccountEditTextFirst">First Name</string>
    <string name="createAccountEditTextLast">Last Name</string>
    <string name="createAccountEditTextEmail">Email Address</string>
    <string name="createAccountEditTextPassword">Password</string>
    <string name="createAccountEditTextConfirm">Confirm Password</string>
    <string name="createAccountTextViewBirthday">Birthday:</string>
    <string name="createAccountButtonSubmit">Submit</string>
    <string name="addCardTextName">Full Name:</string>
    <string name="addCardTextNumber">Card Number:</string>
    <string name="addCardTextCode">CVV Security Code:</string>
    <string name="addCardTextExpirationMonth">Expiration Month:</string>
    <string name="addCardTextExpirationYear">Expiration Year:</string>
    <string name="addCardTextAddress">Address:</string>
    <string name="addCardTextState">State:</string>
    <string name="addCardTextCity">City:</string>
    <string name="addCardTextPostalCode">Postal Code:</string>
    <string name="addCardButtonSubmit">Submit</string>
    <string name="addBankTextName">Account Holder Name:</string>
    <string name="addBankTextNumber">Account Number:</string>
    <string name="addBankTextRouting">Routing Number:</string>
    <string name="addBankTextType">Account Type:</string>
    <string name="addBankButtonSubmit">Submit</string>
    <string name="vendorsButtonFindNearest">Find Nearest</string>
    <string name="menuButtonCheckout">Checkout</string>
    <string name="menuButtonFavorites">Favorites</string>
    <string name="menuButtonBeer">Beer</string>
    <string name="menuButtonShots">Shots</string>
    <string name="menuButtonCocktails">Cocktails</string>
    <string name="menuButtonMartinis">Martinis</string>
    <string name="menuButtonWine">Wine</string>
    <string name="menuImageButtonDescriptionDelete">Delete from Tab</string>
    <string name="menuButtonSelectVendor">Select Vendor</string>
    <string name="cartButtonStation">Station</string>
    <string name="cartButtonPayment">Payment</string>
    <string name="cartButtonTip">Tip</string>
    <string name="cartButtonCoupon">Coupon</string>
    <string name="cartButtonComment">Comment</string>
    <string name="cartButtonReview">Price Breakdown</string>
    <string name="cartButtonFinish">Pay Now</string>
    <string name="codeImageImageViewDescription">QR Code</string>
    <string name="scanTextOrder">Order</string>
    <string name="profileImageAvatar">Image</string>
    <string name="profileTextUser">First Last</string>
    <string name="profileTextFacebook">Facebook: Not Connected</string>
    <string name="profileTextTwitter">Twitter: Not Connected</string>
    <string name="profileTextGooglePlus">Google+: Not Connected</string>
    <string name="profileButtonLogout">Logout</string>
    <string name="profileButtonAddPayment">Add Payment</string>
    <string name="profileButtonRemovePayment">Remove Payment</string>
    <string name="profileButtonFacebook">Connect</string>
    <string name="profileButtonTwitter">Connect</string>
    <string name="profileButtonGooglePlus">Connect</string>
    <string name="searchVendorsTextMain">Search:</string>
    <string name="searchItemsTextMain">Search:</string>
    <string name="settingsTextLocate">Auto-Select Nearest Vendor</string>
    <string name="settingsTextFacebookPublishOrder">Publish Orders to Facebook</string>
    <string name="settingsTextViewNetworkFacebook">Facebook</string>
    <string name="settingsTextViewNetworkTwitter">Twitter</string>
    <string name="settingsTextViewNetworkGooglePlus">Google+</string>
    <string name="settingsButtonNetworkConnect">Connect</string>
    <string name="settingsButtonNetworkDisconnect">Disconnect</string>
    <string name="settingsButtonAddCard">Add Card</string>
    <string name="settingsButtonAddBankAccount">Add Bank</string>
    <string name="settingsButtonLogout">Logout</string>
    <string name="helpText1">First, select the vendor you want to buy from.</string>
    <string name="helpText2">Tap on items to add them to your cart.
        Filter items by category to help find what you\'re looking for.
        Checkout when you\'re done.</string>
    <string name="helpText3">Review and edit your cart, then finish your order.</string>
    <string name="helpText4">A push notification will be sent when your order is ready.
        You can check the status of your orders in the codes screen.
        Tap on an order to view its QR Code.</string>
    <string name="helpText5">Scan your QR Code to verify your order, and you\'re all done!</string>
    <string name="helpTextPage">1 / 5</string>
    <string name="helpButtonStart">Tap Here to Get Started!</string>
    <string name="helpImage1ContentDescription">Image 1</string>
    <string name="helpImage2ContentDescription">Image 2</string>
    <string name="helpImage3ContentDescription">Image 3</string>
    <string name="helpImage4ContentDescription">Image 4</string>
    <string name="helpImage5ContentDescription">Image 5</string>
    <string name="helpImageButtonNextContentDescription">Next</string>
    <string name="helpImageButtonPreviousContentDescription">Previous</string>
    <string name="navigationListItemTextTitle">Buy</string>
    <string name="locationListItemTextName">John\'s</string>
    <string name="locationListItemTextAddress">Los Angeles, 100 Olympia Avenue, CA 90091</string>
    <string name="locationListItemTextPhone">(852) 928&#8211;8737</string>
    <string name="productListItemTextName">Budweiser</string>
    <string name="productListItemTextType">Domestic Beer</string>
    <string name="productListItemTextAlcohol">None</string>
    <string name="productListItemTextPrice">$2.00</string>
    <string name="cartListItemTextName">Budweiser</string>
    <string name="cartListItemTextType">Domestic Beer</string>
    <string name="cartListItemTextAlcohol">None</string>
    <string name="cartListItemTextPrice">$2.00</string>
    <string name="codeListItemTextProducts">1 Budweiser</string>
    <string name="codeListItemTextTime">1/1/10, 12:00 PM</string>
    <string name="codeListItemTextStatus">Waiting</string>
    <string name="removePaymentListItemTextNumber">xxxxxxxxx0000</string>
    <string name="removePaymentListItemTextType">Debit</string>
    <string name="removePaymentListItemTextBankName">Chase</string>
    <string name="removePaymentListItemTextAddress"></string>
    <string name="app_title">Flash VIP</string>
    <string name="app_name">Flash VIP</string>
    <string name="appName">Flash VIP</string>
    <string name="hello_world">Hello world!</string>
    <string name="tab">\u0009</string>
    <string name="appId">648356855200728</string>
    <string name="titleActivityHome">Flash VIP</string>
    <string name="titleActivityLogin">Login</string>
    <string name="titleActivityCreateAccount">Create Account</string>
    <string name="titleActivityPayment">Payment</string>
    <string name="titleActivityAddCard">Add Card</string>
    <string name="titleActivityAddBank">Add Bank</string>
    <string name="titleActivityRemovePayment">Remove Payment</string>
    <string name="titleActivityMenu">Buy</string>
    <string name="titleActivityCart">Cart</string>
    <string name="titleActivityCodes">Codes</string>
    <string name="titleActivityScan">Scan</string>
    <string name="titleActivityFavorites">Favorites</string>
    <string name="titleActivityLocations">Vendors</string>
    <string name="titleActivityProfile">Profile</string>
    <string name="titleActivitySearchVendors">Search</string>
    <string name="titleActivitySearchItems">Search</string>
    <string name="titleActivitySettings">Settings</string>
    <string name="titleActivityHelp">Help</string>
    <string name="titleActivityFacebook">Facebook</string>
    <string name="titleActivityTwitter">Twitter</string>
    <string name="titleActivityTwitterShareEmail">Twitter</string>
    <string name="menuItemSettings">Settings</string>
    <string name="menuItemHelp">Help</string>
    <string name="menuItemSearch">Search</string>
    <string name="menuItemLogout">Logout</string>
    <string name="menuItemLogin">Login</string>
    <string name="menuItemFeedback">Feedback</string>
    <string name="menuItemInvite">Invite</string>
    <string name="miscTextNoConnection">No internet connection.</string>
    <string name="miscTextNoLocations">There are no locations.</string>
    <string name="miscTextNoItems">There are no items on the menu.</string>
    <string name="miscTextNoItemsCart">No items have been added to your cart.</string>
    <string name="miscTextNoCodes">You have not placed any orders</string>
    <string name="miscTextNoCodeImage">This code is unavailable.</string>
	<string name="button_send">Send</string>
	<string name="edit_message">Enter a message</string>
	<string name="bar_name">(Select Bar)</string>
	<string name="feedback_button">Feedback</string>
	<string name="tab_button">Tab</string>
<string name="condes_beer">Beers</string>
    <string name="condes_cocktail">Cocktails</string>
    <string name="condes_shot">Shots</string>
    <string name="condes_martini">Martinis</string>
    <string name="textbox_search_default">Search</string>
    <string name="dialogResetPasswordTextViewTitle">Enter the e-mail address of the account to send a new one</string>
    <string name="dialogResetPasswordButtonSubmit">Submit</string>
    <string name="dialogResetPasswordEditTextEmail">johnsmith@example.com</string>
    <string name="dialogStationButtonCancel">Cancel</string>
    <string name="dialogPaymentButtonCancel">Cancel</string>
    <string name="dialogTipTextViewTitle">Enter the amount to tip with your order</string>
    <string name="dialogTipTextViewPercent">0%</string>
    <string name="dialogTipEditTextCustom">0.00</string>
    <string name="dialogTipButtonDone">Done</string>
    <string name="dialogCommentTextViewTitle">Enter a comment to be sent with your order to the vendor</string>
    <string name="dialogCommentEditTextMessage">Max 300 characters...</string>
    <string name="dialogCommentButtonDone">Done</string>
    <string name="dialogReviewTextViewTitle">Here is a breakdown of what costs what</string>
    <string name="dialogReviewTextViewMain"></string>
    <string name="dialogReviewButtonDone">Done</string>
    <string-array name="array_navigation">
        <item>Buy</item>
        <item>Orders</item>
        <item>Vouchers</item>
        <item>Settings</item>
    </string-array>
</resources>