<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/createAccountLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/createAccountEditTextFirst"
        style="@style/EditTextMainName"
        android:hint="@string/createAccountEditTextFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <EditText
        android:id="@+id/createAccountEditTextLast"
        style="@style/EditTextMainName"
        android:hint="@string/createAccountEditTextLast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createAccountEditTextFirst" />

    <EditText
        android:id="@+id/createAccountEditTextEmail"
        style="@style/EditTextMainEmail"
        android:hint="@string/createAccountEditTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createAccountEditTextLast" />

    <EditText
        android:id="@+id/createAccountEditTextPassword"
        style="@style/EditTextMainPassword"
        android:hint="@string/createAccountEditTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createAccountEditTextEmail" />

    <EditText
        android:id="@+id/createAccountEditTextConfirm"
        style="@style/EditTextMainPassword"
        android:hint="@string/createAccountEditTextConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createAccountEditTextPassword" />

    <TextView
        android:id="@+id/createAccountTextViewBirthday"
        style="@style/TextViewLabel"
        android:text="@string/createAccountTextViewBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/createAccountEditTextConfirm" />

    <Button
        android:id="@+id/createAccountButtonBirthday"
        style="@style/ButtonMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/createAccountTextViewBirthday"
        android:layout_alignBaseline="@+id/createAccountTextViewBirthday" />

    <Button
        android:id="@+id/createAccountButtonSubmit"
        style="@style/ButtonMain"
        android:text="@string/createAccountButtonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/createAccountTextViewBirthday"
        android:layout_margin="30dp" />

</RelativeLayout>
