<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogResetPasswordRelativeLayoutMain"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dialogResetPasswordTextViewTitle"
            style="@style/subtitle"
            android:text="@string/dialogResetPasswordTextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/dialogResetPasswordEditTextEmail"
                style="@style/darkEditText"
                android:hint="@string/dialogResetPasswordEditTextEmail"
                android:maxLength="200"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/dialogResetPasswordButtonSubmit"
            style="@style/flatButton"
            android:text="@string/dialogResetPasswordButtonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center" />

    </LinearLayout>

</RelativeLayout>
