<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginCoordinatorLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background">

        <RelativeLayout
            android:id="@+id/loginRelativeLayoutLoading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00FFFFFF">

            <LinearLayout
                android:id="@+id/loginLinearLayoutContent"
                android:background="#00FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:id="@+id/loginLinearLayoutTitle"
                    android:background="#00FFFFFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="30dp">

                    <ImageView
                        android:id="@+id/loginImageViewLogo"
                        android:src="@drawable/logo_app"
                        android:background="#00FFFFFF"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="5dp" />

                    <TextView
                        android:id="@+id/loginTextViewTitle"
                        style="@style/appTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_margin="5dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/loginTextViewTitle"/>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <EditText
                        android:id="@+id/loginEditTextEmail"
                        style="@style/lightEditText"
                        android:hint="E-mail"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:lines="1"
                        android:singleLine="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <EditText
                        android:id="@+id/loginEditTextPassword"
                        style="@style/lightEditText"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:lines="1"
                        android:singleLine="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/loginButtonSubmit"
                    style="@style/raisedButton"
                    android:text="@string/loginButtonSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp" />

                <LinearLayout
                    android:id="@+id/loginLinearLayoutAccountControls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/loginButtonResetPassword"
                        style="@style/raisedButton"
                        android:text="@string/loginButtonResetPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="5dp" />

                    <Button
                        android:id="@+id/loginButtonCreateAccount"
                        style="@style/raisedButton"
                        android:text="@string/loginButtonCreateAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="5dp" />

                </LinearLayout>

                <Button
                    android:id="@+id/loginButtonFacebook"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/loginButtonFacebook" />

                <Button
                    android:id="@+id/loginButtonTwitter"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/loginButtonTwitter" />

                <Button
                    android:id="@+id/loginButtonGoogle"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/loginButtonGooglePlus" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
