<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/helpDrawerNavigation"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <!-- Next & Previous Buttons -->

        <ImageButton
            android:id="@+id/helpImageButtonNext"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/helpImageButtonNextContentDescription"
            android:src="@drawable/arrow_right" />

        <ImageButton
            android:id="@+id/helpImageButtonPrevious"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/helpImageButtonPreviousContentDescription"
            android:src="@drawable/arrow_left" />

        <!-- Page Indication Text -->

        <TextView
            android:id="@+id/helpTextPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            style="@style/StyleHelpTextPage" />

        <!-- Help View Animator -->

        <ViewAnimator
            android:id="@+id/helpViewAnimatorMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/helpTextPage"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/helpImageButtonNext"
            android:layout_toRightOf="@+id/helpImageButtonPrevious" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/helpText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    style="@style/StyleHelpText1" />

                <ImageView
                    android:contentDescription="@string/helpImage1ContentDescription"
                    android:src="@drawable/help_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/helpText1"
                    android:layout_margin="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/helpText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    style="@style/StyleHelpText2" />

                <ImageView
                    android:contentDescription="@string/helpImage2ContentDescription"
                    android:src="@drawable/help_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/helpText2"
                    android:layout_margin="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/helpText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    style="@style/StyleHelpText3" />

                <ImageView
                    android:contentDescription="@string/helpImage3ContentDescription"
                    android:src="@drawable/help_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/helpText3"
                    android:layout_margin="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/helpText4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    style="@style/StyleHelpText4" />

                <ImageView
                    android:contentDescription="@string/helpImage4ContentDescription"
                    android:src="@drawable/help_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/helpText4"
                    android:layout_margin="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/helpText5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    style="@style/StyleHelpText5" />

                <Button
                    android:id="@+id/helpButtonStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="10dp"
                    style="@style/StyleHelpButtonStart" />

                <ImageView
                    android:id="@+id/helpImage5"
                    android:contentDescription="@string/helpImage5ContentDescription"
                    android:src="@drawable/help_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_above="@+id/helpButtonStart"
                    android:layout_below="@+id/helpText5"
                    android:layout_margin="10dp" />
            </RelativeLayout>
        </ViewAnimator>

    </RelativeLayout>

    <!-- The navigation drawer -->
    <com.patron.view.NavigationListView
        android:id="@+id/helpListNavigation"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"/>

</android.support.v4.widget.DrawerLayout>
